--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -7,7 +7,8 @@
       "@/pages/*": ["./pages/*"],
       "@/api/*": ["./api/*"],
       "@/utils/*": ["./utils/*"],
-      "@/public/*": ["./public/*"]
+      "@/public/*": ["./public/*"],
+      "@/services/*": ["./services/*"]
     },
     "target": "es5",
     "downlevelIteration": true,
